# ProgSynth

./: .gitignore  CMakeLists.txt  CppProperties.json  LANGUAGE.md  README.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  SpectrumSink.h  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h
Source/lang/: Ast.h  CompiledPatch.h  Compiler.cpp  Compiler.h  ExprTree.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  Units.h
Source/ui/: EditorPane.cpp  EditorPane.h  ReplPane.cpp  ReplPane.h  SpectrumPane.cpp  SpectrumPane.h  StatusPane.cpp  StatusPane.h  Theme.h
